# kernel-evo

./: .gitignore  LICENSE  README.md  context.py  metrics.yaml  pipeline_builders.py  pyproject.toml  task_description.txt  validate.py  validate_server.py  validate_server_rpc.py
.github/workflows/: ci.yml
config/pipeline/: kernel_generation_direct.yaml
eval/: eval.py
generated_best_scripts/: baseline_1_15_lowermatmul.py  baseline_1_97_scaleddotprod_attention.py  baseline_2_21_onv2d_Add_Scale_Sigmoid_GroupNorm.py  baseline_2_98_Matmul_AvgPool_GELU_Scale_Max.py  baseline_assoc.py  baseline_updatemem.py  best_1_15_lowermatmul.py  best_1_97_scaleddotprod_attention.py  best_2_21_onv2d_Add_Scale_Sigmoid_GroupNorm.py  best_2_98_Matmul_AvgPool_GELU_Scale_Max.py  best_assoc.py  best_updatemem.py
memory/: extract_fixes_from_logs.py  make_best_programs_memory.py  make_err_mem_from_logs.py
scripts/: compare_programs.py  cpp_backend_utils.py  extract_program.py  fix_model_class_names.py  generate_and_eval_single_sample_gigaevo.py  openai_proxy_logger.py  python_backend_utils.py
src/kernel_evo/: __main__.py  cli.py
src/kernel_evo/commands/: compare.py  eval_server.py  evolve.py  extract.py  memory.py
src/kernel_evo/core/: precision.py
src/kernel_evo/core/code/: cuda_backend_utils.py  cute_backend_utils.py  evolve.py  python_backend_utils.py
src/kernel_evo/core/eval/: eval.py  server.py  server_rpc.py
src/kernel_evo/core/llm/: openai_proxy_logger.py
src/kernel_evo/core/llm/models/: extract_schema_utils.py  json_recover_router.py  json_recover_utils.py
src/kernel_evo/core/memory/: best_programs_memory.py  errors_memory.py  extract_fixes_from_logs.py
src/kernel_evo/core/pipeline/: builders.py
src/kernel_evo/core/profile/: __init__.py  artifacts.py  contracts.py  torch_runner.py
src/kernel_evo/core/program/: compare.py  extract.py
src/kernel_evo/core/stages/profile/: __init__.py  agent.py  prompts.py  stage.py  summary_compaction.py
src/kernel_evo/core/stages/repair/: __init__.py  agent.py  prompts.py  stage.py
src/kernel_evo/resources/: context.py  metrics.yaml  paths.py  prompt_loader.py  task_description.txt  validate.py  workspace.py
src/kernel_evo/resources/config/: config.yaml
src/kernel_evo/resources/config/llm/: single_recover.yaml
src/kernel_evo/resources/config/pipeline/: kernel_generation_direct.yaml
src/kernel_evo/resources/config/prompts/: kernel.yaml
src/kernel_evo/resources/gigaevo/: memory_backend.yaml  run.py
src/kernel_evo/resources/gigaevo/config/: config.yaml
src/kernel_evo/resources/prompts/insights/: user.txt
src/kernel_evo/resources/prompts/mutation/: system.txt  user.txt
src/kernel_evo/resources/prompts/profile_extract/: system.txt  user.txt
src/kernel_evo/tools/: __init__.py  profile_ncu.py  profile_target.py  profile_torch.py
src/kernel_generation/: __init__.py  __main__.py  cli.py
src/kernel_generation/commands/: compare.py  eval_server.py  evolve.py  extract.py  memory.py
src/kernel_generation/core/code/: cpp_backend_utils.py  evolve.py  python_backend_utils.py
src/kernel_generation/core/eval/: server.py  server_rpc.py
src/kernel_generation/core/memory/: best_programs_memory.py  errors_memory.py  extract_fixes_from_logs.py
src/kernel_generation/core/pipeline/: builders.py
src/kernel_generation/core/program/: compare.py
src/kernel_generation/resources/: prompt_loader.py  task_description.txt  validate.py
tasks/armt_associate/: task.py
tasks/armt_associate/tests/: test_task.py
tasks/armt_updatemem/: task.py
tests/: test_cuda_build_env.py  test_eval_correctness_compare.py  test_eval_precision.py  test_eval_transient_compilation.py  test_precision_policy.py  test_profile_ncu.py  test_profile_stage_paths.py  test_profile_summary_compaction.py  test_runtime_precision_config.py  test_task_description_precision_guidance.py  test_validate_transient_retry.py  test_workspace.py
(+24 files in other folders)
