# Install with Python version check relaxed (kernelbench declares 3.10.* but works on 3.12):
#   pip install -e . --ignore-requires-python

[project]
name = "kernel-evo"
version = "0.1.0"
description = "Evolutionary Generation for efficient kernels"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gigaevo @ git+https://github.com/KhrulkovV/gigaevo-core-internal.git@svtdanny/prompt-dir",
    "kernelbench @ git+https://github.com/ScalingIntelligence/KernelBench.git",

    "json_repair",
    "fastapi", # eval server

    "cma", # gigaevo. TODO: refactor on gigaevo side
    # memory. TODO: refactor on gigaevo side
    "chromadb", 
    "nltk",
    "rank_bm25",
    "sentence_transformers",
]

[project.scripts]
kernel-evo = "kernel_evo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["kernel_evo*"]

[tool.setuptools.package-data]
kernel_evo = [
    "resources/*.yaml",
    "resources/*.txt",
    "resources/config/**/*",
    "resources/prompts/**/*",
    "resources/gigaevo/run.py",
    "resources/gigaevo/config/**/*",
]

[dependency-groups]
dev = [
    "ruff"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]  # E = pycodestyle (includes E501 line-too-long), F = Pyflakes
